# neat

./: Cargo.toml  LICENSE  README.md  neat.toml
samples/: Downloads.toml  Pictures.toml  neat.toml  tex.toml
src/: main.rs
src/neat/: config.rs  error.rs  glob.rs  matcher.rs  mod.rs
