[package]
name = "neat"
version = "0.1.1"
authors = ["José Duarte <jmg.duarte@campus.fct.unl.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.6"
clap = "3.0.0-beta.1"
serde = {version = "1.0", features=["derive"]}
glob = "0.3.0"
colored = "2"
anyhow = "1.0.32"
thiserror = "1.0.20"